fix images not showing

--- a/public/styles/slide.css
+++ b/public/styles/slide.css
@@ -1,3 +1,12 @@
+:root {
+  --red: rgb(228, 35, 35);
+  --light-red: rgb(247, 109, 109);
+  --dark-gray: rgb(22, 22, 22);
+  --gray: rgb(80, 80, 80);
+  --light-gray: rgb(250, 250, 250);
+  --card-height: 350px;
+}
+
 .slider-bg .slide {
   background-size: cover;
   margin: 0;
@@ -55,5 +64,22 @@ a.post .overlay {
   background-size: 50%;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #eee;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+a.post .overlay::before {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 0;
+  background-size: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: var(--red);
+  opacity: 0.4;
+  transition: all 0.3s;
+}
+
+a.post:hover .overlay::before {
+  height: 100%;
 }
